[package]
name = "foliar_classifier"
version = "0.4.0"
edition = "2021"

[dependencies]
eframe = "0.29"
image = { version = "0.24", features = ["jpeg", "png", "bmp", "tiff"] }
rand = "0.8"
rfd = "0.12"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
